import { describe, it, expect } from "vitest"
import { buildTypedBindings, generateGeneratedFile } from "./generators"

describe("Typed bindings generator", () => {
  const validDidContent = `service : {
    greet: (text) -> (text) query;
}`

  it("merges TS types with the real idlFactory/init implementation", () => {
    const result = buildTypedBindings({ didContent: validDidContent })

    expect(result.success).toBe(true)

    // TS type block is preserved (verbatim from didToTs minus the `declare const` lines)
    expect(result.content).toContain(
      "import type { IDL } from '@icp-sdk/core/candid'"
    )
    expect(result.content).toContain(
      "export interface _SERVICE { 'greet' : ActorMethod<[string], string> }"
    )

    // No leftover `declare const` lines — the JS impl provides the values
    expect(result.content).not.toContain("export declare const idlFactory")
    expect(result.content).not.toContain("export declare const init")

    // Real runtime factory with inline TS annotation
    expect(result.content).toContain(
      "export const idlFactory: IDL.InterfaceFactory = ({ IDL }) =>"
    )
    expect(result.content).toContain(
      "export const init: (args: { IDL: typeof IDL }) => IDL.Type[] = ({ IDL }) => { return []; };"
    )

    // The factory body references the actual IDL.Service call
    expect(result.content).toContain(
      "return IDL.Service({ 'greet' : IDL.Func([IDL.Text], [IDL.Text], ['query']) });"
    )
  })

  it("returns a typed error when the candid is invalid", () => {
    const result = buildTypedBindings({
      didContent: "service : { broken }",
      canisterName: "test_canister",
    })

    expect(result.success).toBe(false)
    expect(result.error).toContain("test_canister")
  })

  it("generateGeneratedFile emits a bindings-only file by default", () => {
    const result = generateGeneratedFile({
      canisterName: "backend",
      didFile: "backend.did",
      didContent: validDidContent,
    })

    expect(result.success).toBe(true)
    expect(result.content).toMatchSnapshot("bindings-only-generated")

    expect(result.content).toContain("AUTO-GENERATED by @ic-reactor/codegen")
    expect(result.content).toContain("idlFactory")
    // No reactor/hooks when includeReactor is false
    expect(result.content).not.toContain("DisplayReactor")
    expect(result.content).not.toContain("createActorHooks")
  })

  it("generateGeneratedFile inlines the typed reactor + hooks when requested", () => {
    const result = generateGeneratedFile({
      canisterName: "backend",
      didFile: "backend.did",
      didContent: validDidContent,
      includeReactor: true,
      clientManagerPath: "../../clients",
    })

    expect(result.success).toBe(true)
    expect(result.content).toMatchSnapshot("full-generated")

    // Bindings present
    expect(result.content).toContain("export const idlFactory")
    expect(result.content).toContain("export interface _SERVICE")

    // Reactor block inlined in the same file — no separate declarations import
    expect(result.content).toContain(
      "export const backendReactor = new DisplayReactor<BackendService>"
    )
    expect(result.content).toContain("createActorHooks(backendReactor)")
    expect(result.content).toContain("useBackendMutation")
    expect(result.content).not.toContain('from "./declarations/backend"')
  })
})
