// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typed bindings generator > generateGeneratedFile emits a bindings-only file by default > bindings-only-generated 1`] = `
"/**
 * backend generated bindings.
 *
 * AUTO-GENERATED by @ic-reactor/codegen — do not edit.
 * Regenerated from the source .did on every codegen run.
 *
 * Contains: service types, the real idlFactory/init, and (when enabled) the
 * typed reactor + hook exports. Keep app-specific logic in the stable
 * \`index.ts\` wrapper instead of editing this file.
 */
import type { Principal } from '@icp-sdk/core/principal';
import type { ActorMethod } from '@icp-sdk/core/agent';
import type { IDL } from '@icp-sdk/core/candid';

export interface _SERVICE { 'greet' : ActorMethod<[string], string> }

// ── IDL factory ────────────────────────────────────────────────────────────
export const idlFactory: IDL.InterfaceFactory = ({ IDL }) => {
  return IDL.Service({ 'greet' : IDL.Func([IDL.Text], [IDL.Text], ['query']) });
};
export const init: (args: { IDL: typeof IDL }) => IDL.Type[] = ({ IDL }) => { return []; };
"
`;

exports[`Typed bindings generator > generateGeneratedFile inlines the typed reactor + hooks when requested > full-generated 1`] = `
"/**
 * backend generated bindings.
 *
 * AUTO-GENERATED by @ic-reactor/codegen — do not edit.
 * Regenerated from the source .did on every codegen run.
 *
 * Contains: service types, the real idlFactory/init, and (when enabled) the
 * typed reactor + hook exports. Keep app-specific logic in the stable
 * \`index.ts\` wrapper instead of editing this file.
 */
import type { Principal } from '@icp-sdk/core/principal';
import type { ActorMethod } from '@icp-sdk/core/agent';
import type { IDL } from '@icp-sdk/core/candid';

export interface _SERVICE { 'greet' : ActorMethod<[string], string> }

// ── IDL factory ────────────────────────────────────────────────────────────
export const idlFactory: IDL.InterfaceFactory = ({ IDL }) => {
  return IDL.Service({ 'greet' : IDL.Func([IDL.Text], [IDL.Text], ['query']) });
};
export const init: (args: { IDL: typeof IDL }) => IDL.Type[] = ({ IDL }) => { return []; };

import { createActorHooks } from "@ic-reactor/react"
import { DisplayReactor } from "@ic-reactor/react"
import { clientManager } from "../../clients"

export type BackendService = _SERVICE
/**
 * Backend Reactor — typed reactor + hooks.
 * Auto-generated by @ic-reactor/codegen — do not edit.
 */
export const backendReactor = new DisplayReactor<BackendService>({
  clientManager,
  idlFactory,
  name: "backend",
})

export const {
  useActorQuery: useBackendQuery,
  useActorSuspenseQuery: useBackendSuspenseQuery,
  useActorInfiniteQuery: useBackendInfiniteQuery,
  useActorSuspenseInfiniteQuery: useBackendSuspenseInfiniteQuery,
  useActorMutation: useBackendMutation,
  useActorMethod: useBackendMethod,
} = createActorHooks(backendReactor)
"
`;
